--- a/configure.ac
+++ b/configure.ac
@@ -1,10 +1,14 @@
-AC_INIT
+AC_CONFIG_COMMANDS([create_builddir], [mkdir build])
 
+AC_INIT(cpp_wt_dbo_soap, alpha1)
+
+AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 AC_LANG_PUSH([C])
 AC_LANG_PUSH([C++])
 AC_CHECK_HEADERS([Wt/Dbo/Dbo.h])
 AC_CHECK_HEADERS([Wt/Dbo/backend/Sqlite3.h])
 AC_LANG_POP([C++])
 AC_LANG_POP([C])
+AC_CONFIG_FILES([Makefile])
 
 AC_OUTPUT
