added file extension

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,4 +3,4 @@ AM_INIT_AUTOMAKE([1.11 silent-rules])
 SUBDIRS = build
 
 bin_PROGRAMS = example1
-example1_SOURCES = src/example1
+example1_SOURCES = src/example1.cc
