--- a/Makefile.am
+++ b/Makefile.am
@@ -7,5 +7,6 @@ AM_CPPFLAGS = -I/opt/Wt/include -I/usr/local/include
 AM_LDFLAGS = -L/usr/local/lib -L/opt/Wt/lib
 LDADD = -lwtdbo -lwtdbopostgres -lwtdbosqlite3
 
-bin_PROGRAMS = example1
-example1_SOURCES = src/example1.cc
+bin_PROGRAMS = build/example1 build/example2
+build_example1_SOURCES = src/example1.cc
+build_example2_SOURCES = src/example2.cc
