--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@
 #SUBDIRS = build
 
 AM_CFLAGS = -I/opt/Wt/include -I/usr/local/include 
-AM_CPPFLAGS = -I/opt/Wt/include -I/usr/local/include -std=x++17
+AM_CPPFLAGS = -I/opt/Wt/include -I/usr/local/include -std=c++17
 AM_LDFLAGS = -L/usr/local/lib -L/opt/Wt/lib
 LDADD = -lwtdbo -lwtdbopostgres -lwtdbosqlite3
 
